--- a/src/app.less
+++ b/src/app.less
@@ -1,3 +1,9 @@
 a {
   text-decoration: none;
 }
+i{
+  display: inline-block;
+}
+html{
+  font-family: PingFang SC,system-ui,-apple-system,Segoe UI,Rototo,Helvetica,Arial,sans-serif;
+}
